The KeywordManager isn't done; but I do have it so that the common keyword check boxes always reflect the typed keywords and vice versa.

--- a/KeywordManager-Info.plist
+++ b/KeywordManager-Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>KeywordManagerPreferences</string>
+	<string>KeywordManager</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.elliotglaysher.CQView.KeywordManagerPreferences</string>
+	<string>org.elliotglaysher.CQView.KeywordManager</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -17,6 +17,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>NSPrincipalClass</key>
-	<string>KeywordManagerPreferences</string>
+	<string>KeywordManagerController</string>
 </dict>
 </plist>
