--- a/SortManagerPreferences-Info.plist
+++ b/SortManagerPreferences-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>SortManagerPreferences</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.elliotglaysher.CQView.SortManagerPreferences</string>
+	<string>org.elliotglaysher.VitaminSEE.SortManagerPreferences</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
