Compressed all the categories into AppKitAdditions.[mh]. Now compiles with no warnings. Started splitting FileView stuff...

--- a/ViewAsIconsFileView-Info.plist
+++ b/ViewAsIconsFileView-Info.plist
@@ -5,15 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>VitaminSEE</string>
-	<key>CFBundleHelpBookFolder</key>
-	<string>VitaminSEE Help</string>
-	<key>CFBundleHelpBookName</key>
-	<string>VitaminSEE Help</string>
-	<key>CFBundleIconFile</key>
-	<string>VitaminSEE</string>
+	<string>ViewAsIconsFileView</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.elliotglaysher.VitaminSEE</string>
+	<string>com.yourcompany.ViewAsIconsFileView</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -21,10 +15,6 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.5.1</string>
-	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
-	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
+	<string>1.0</string>
 </dict>
 </plist>
