--- a/Info.plist
+++ b/Info.plist
@@ -21,6 +21,25 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
+				<string>BMP</string>
+				<string>bmp</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>image/bmp</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Windows Bitmap Image</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>BMPf</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
 				<string>png</string>
 				<string>PNG</string>
 			</array>
@@ -117,6 +136,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>0.6 dev</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.3.5</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
