--- a/Components/ViewAsIconsView/ViewAsIconsFileView-Info.plist
+++ b/Components/ViewAsIconsView/ViewAsIconsFileView-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>ViewAsIconsFileView</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.ViewAsIconsFileView</string>
+	<string>org.elliotglaysher.VitaminSEE.ViewAsIconsFileView</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
