A lot more file formats understood now by just asking Apple what it supports...

--- a/Info.plist
+++ b/Info.plist
@@ -9,6 +9,359 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
+				<string>ico</string>
+				<string>ICO</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>image/ico</string>
+				<string>image/x-icon</string>
+				<string>application/ico</string>
+				<string>application/x-ico</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Windows Icon</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>ICO</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>pntg</string>
+				<string>PNTG</string>
+				<string>pnt</string>
+				<string>PNT</string>
+				<string>mac</string>
+				<string>MAC</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>application/mac</string>
+				<string>image/mac</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>MacPaint Bitmap Graphic</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>PNTG</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>fpx</string>
+				<string>FPX</string>
+				<string>fpix</string>
+				<string>FPIX</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>application/vnd.fpx</string>
+				<string>image/fpx</string>
+				<string>image/x-fpx</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>FlashPix Bitmap</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>FPix</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>pict</string>
+				<string>PICT</string>
+				<string>pct</string>
+				<string>PCT</string>
+				<string>pic</string>
+				<string>PIC</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>image/pict</string>
+				<string>image/x-pict</string>
+				<string>image/x-macpict</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Macintosh Quickdraw/PICT Drawing</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>PICT</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.apple.pict</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>sgi</string>
+				<string>SGI</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>image/sgi</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Silicon Graphics IRIS Graphic File</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>.SGI</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>tga</string>
+				<string>TGA</string>
+				<string>targa</string>
+				<string>TARGA</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>application/tga</string>
+				<string>image/tga</string>
+				<string>image/targa</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Targa Image</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>TPIC</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>qti</string>
+				<string>QTI</string>
+				<string>qtif</string>
+				<string>QTIF</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>QuickTime Image</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.apple.quicktime-image</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>jp2</string>
+				<string>JP2</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>image/jp2</string>
+				<string>image/jpeg2000</string>
+				<string>image/jpeg2000-image</string>
+				<string>image/x-jpeg2000-image</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>JPEG 2000 Image</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.jpeg-2000</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>mrw</string>
+				<string>MRW</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Minolta Diamage Raw Image File</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>orf</string>
+				<string>ORF</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Olympus Digital Camera Raw Image File</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>raf</string>
+				<string>RAF</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Fuji CCD-RAW Graphic File</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>nef</string>
+				<string>NEF</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Nikon Digital SLR Camera Raw Image File</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>crw</string>
+				<string>CRW</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Canon Digital Camera Raw Image Format</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>dng</string>
+				<string>DNG</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Digital Negative</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>dcr</string>
+				<string>DCR</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Kodak Digital Camera Raw Image File</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>cr2</string>
+				<string>CR2</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Canon Digital Camera Raw Image Format</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>xbm</string>
+				<string>XBM</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>image/x-xbitmap</string>
+				<string>image/xbm</string>
+				<string>image/x-xbitmap</string>
+				<string>image/x-xbm</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>X Bitmap Graphic</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
 				<string>psd</string>
 				<string>PSD</string>
 			</array>
@@ -252,7 +605,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.6.2</string>
+	<string>0.6.3</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSMainNibFile</key>
