--- a/Components/DesktopBackground/DesktopBackground-Info.plist
+++ b/Components/DesktopBackground/DesktopBackground-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>DesktopBackground</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.DesktopBackground</string>
+	<string>org.elliotglaysher.VitaminSEE.DesktopBackground</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -16,5 +16,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>NSPrincipalClass</key>
+	<string>DesktopBackground</string>
 </dict>
 </plist>
