Moved chunk off code off of VitaminSEEController and put it in OpenWithMenuController where it belongs

--- a/Components/OpenWithMenu/OpenWithMenu-Info.plist
+++ b/Components/OpenWithMenu/OpenWithMenu-Info.plist
@@ -17,6 +17,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>NSPrincipalClass</key>
-	<string>EGOpenWithMenuDelegate</string>
+	<string>OpenWithMenuController</string>
 </dict>
 </plist>
