Forgot to change the version number.

--- a/Info.plist
+++ b/Info.plist
@@ -605,7 +605,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.6.4-rc1</string>
+	<string>0.6.4</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSMainNibFile</key>
