--- a/Components/DesktopBackground/DesktopBackground-Info.plist
+++ b/Components/DesktopBackground/DesktopBackground-Info.plist
@@ -18,5 +18,9 @@
 	<string>1.0</string>
 	<key>NSPrincipalClass</key>
 	<string>DesktopBackground</string>
+	<key>VSPluginName</key>
+	<string>DesktopBackground</string>
+	<key>VSPluginType</key>
+	<string>InternalUse</string>
 </dict>
 </plist>
