OpenWithMenu done, and ApplicationController's -validateMenuItem: function has been cleaned up and split into subfunctions, because the main validator was too damn long.

--- a/Components/OpenWithMenu/OpenWithMenu-Info.plist
+++ b/Components/OpenWithMenu/OpenWithMenu-Info.plist
@@ -18,5 +18,9 @@
 	<string>1.0</string>
 	<key>NSPrincipalClass</key>
 	<string>OpenWithMenuController</string>
+	<key>VSPluginName</key>
+	<string>OpenWithMenu</string>
+	<key>VSPluginType</key>
+	<string>InternalUse</string>
 </dict>
 </plist>
