--- a/Components/FavoritesMenu/FavoritesMenu-Info.plist
+++ b/Components/FavoritesMenu/FavoritesMenu-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>FavoritesMenu</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.FavoritesMenu</string>
+	<string>org.elliotglaysher.VitaminSEE.FavoritesMenu</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
