--- a/Components/FileOperations/FileOperations-Info.plist
+++ b/Components/FileOperations/FileOperations-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>FileOperations</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.FileOperations</string>
+	<string>org.elliotglaysher.VitaminSEE.FileOperations</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
