--- a/Components/GotoFolderWindow/GotoFolderWindow-Info.plist
+++ b/Components/GotoFolderWindow/GotoFolderWindow-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>GotoFolderWindow</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.GotoFolderWindow</string>
+	<string>org.elliotglaysher.VitaminSEE.GotoFolderWindow</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -18,9 +18,9 @@
 	<string>1.0</string>
 	<key>NSPrincipalClass</key>
 	<string>GotoFolderWindowFactory</string>
-	<key>VSPluginType</key>
-	<string>InternalUse</string>
 	<key>VSPluginName</key>
 	<string>GotoFolderWindow</string>
+	<key>VSPluginType</key>
+	<string>InternalUse</string>
 </dict>
 </plist>
