--- a/Components/ViewIconsFileList/ViewIconsFileList-Info.plist
+++ b/Components/ViewIconsFileList/ViewIconsFileList-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>ViewIconsFileList</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.ViewIconsFileList</string>
+	<string>org.elliotglaysher.VitaminSEE.ViewIconsFileList</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
