--- a/Info.plist
+++ b/Info.plist
@@ -606,8 +606,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>0.7-beta</string>
+	<key>CFBundleShortVersionString</key>
+	<string>0.7</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.3</string>
+	<string>10.4</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
