--- a/Info.plist
+++ b/Info.plist
@@ -605,7 +605,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.7-beta</string>
+	<string>0.7</string>
 	<key>CFBundleShortVersionString</key>
 	<string>0.7</string>
 	<key>LSMinimumSystemVersion</key>
