Add Unit Testing (and boy do we need it)

--- a/config/Development.xcconfig
+++ b/config/Development.xcconfig
@@ -2,3 +2,4 @@ ARCHS = ppc
 SDKROOT = /Developer/SDKs/MacOSX10.4u.sdk
 MACOSX_DEPLOYMENT_TARGET = 10.4
 GCC_FAST_OBJC_DISPATCH = YES
+ZERO_LINK = NO
