--- a/org.elliotglaysher.VitaminSEE.plist
+++ b/org.elliotglaysher.VitaminSEE.plist
@@ -21,7 +21,7 @@
 	<key>fileCreator</key>
 	<string></string>
 	<key>fileReleaseDateD</key>
-	<string>22</string>
+	<string>30</string>
 	<key>fileReleaseDateM</key>
 	<string>03</string>
 	<key>fileReleaseDateY</key>
@@ -36,9 +36,9 @@
 	<string>Fast image browser with Fullscreen</string>
 	<key>productDownloadURL</key>
 	<array>
-		<string>http://www.elliotglaysher.org/Releases/VitaminSEE%200.7.1.1.dmg</string>
-		<string>http://www.elliotglaysher.org/Releases/VitaminSEE%200.7.1.1-Panther.dmg</string>
-		<string>http://www.elliotglaysher.org/Releases/VitaminSEE%200.7.1.1%20Source.tar.bz2</string>
+		<string>http://www.elliotglaysher.org/Releases/VitaminSEE%200.7.1.2.dmg</string>
+		<string>http://www.elliotglaysher.org/Releases/VitaminSEE%200.7.1.2-Panther.dmg</string>
+		<string>http://www.elliotglaysher.org/Releases/VitaminSEE%200.7.1.2%20Source.tar.bz2</string>
 	</array>
 	<key>productFileSize</key>
 	<string></string>
@@ -70,12 +70,10 @@
 	<key>productPrice</key>
 	<string></string>
 	<key>productReleaseNotes</key>
-	<string>* When I upgraded to IconFamily 0.9.1, I forgot to port my changes that would restore a file's modification date. Fix this so building a thumbnail of a file does set the modification date.
-* Back/Forward will now focus on the file/folder you were on previously, instead of always starting at the beginning of the list.
-</string>
+	<string>Fixes a number of memory leaks; VitaminSEE was not properly releasing memory when a window was closed. This build fixes that.</string>
 	<key>productRequirements</key>
 	<string>Mac OS 10.3.9, Mac OS 10.4.4 or later</string>
 	<key>productVersion</key>
-	<string>0.7.1.1</string>
+	<string>0.7.1.2</string>
 </dict>
 </plist>
