--- a/Components/FullScreenMode/FullScreenMode-Info.plist
+++ b/Components/FullScreenMode/FullScreenMode-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.FullScreenMode</string>
+	<string>org.elliotglaysher.VitaminSEE.FullScreenMode</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
