--- a/config/Deployment.xcconfig
+++ b/config/Deployment.xcconfig
@@ -2,3 +2,4 @@ ARCHS = ppc i386
 SDKROOT = /Developer/SDKs/MacOSX10.4u.sdk
 MACOSX_DEPLOYMENT_TARGET = 10.4
 GCC_FAST_OBJC_DISPATCH = YES
+OTHER_CFLAGS += -DNS_BLOCK_ASSERTIONS=1
